src/ui/snapshots/state/default/pr_selection/state_dialog_all_selected.snap
---
source: src/ui/state/default/pr_selection.rs
expression: harness.backend()
---
"                                                                                "
" ┌Pull Requests (0/3)─────────────────────────────────────────────────────────┐ "
" │      PR #     Date         Title           Author          Work Items      ↑ "
" │→     102      2024-01-14   Add analytics t Carol Martinez  #1003 (Resolved)█ "
" │      101      2024-01-12   Update user pro Bob Wilson      #1002 (Active)  █ "
" │      100      2024-01-10   Fix login bug   Alice Johnson   #1001 (Closed)  █ "
" │                                                                            █ "
" │                  ┌──────────────────────────────────────┐                  █ "
" │                  │ Select Work Item States (5 selected) │                  █ "
" │                  └──────────────────────────────────────┘                  █ "
" │                  ┌States────────────────────────────────┐                  █ "
" │                  │✓ Active                              │                  █ "
" │                  │✓ Resolved                            │                  ║ "
" │                  │✓ Closed                              │                  ↓ "
" └──────────────────│✓ New                                 │──────────────────┘ "
" ┌Work Item (1/1)───│✓ Removed                             │──────────────────┐ "
" │Bug         #1001 │                                      │                  │ "
" │● Closed          │                                      │: Alice Johnson   │ "
" └──────────────────└──────────────────────────────────────┘──────────────────┘ "
" ┌History───────────┌Help──────────────────────────────────┐──────────────────┐ "
" │No history availab│↑/↓: Navigate | Space: Toggle state | │                  │ "
" └──────────────────│c: Clear & apply | a: Select all state│──────────────────┘ "
" ┌Reproduction Steps└──────────────────────────────────────┘──────────────────┐ "
" │1. Navigate to login page                                                   │ "
" │2. Click login button                                                       │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌Help────────────────────────────────────────────────────────────────────────┐ "
" │↑/↓: Navigate PRs | ←/→: Work Items | /: Search | Space: Toggle | Enter: Con│ "
" └────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                "
