src/ui/snapshots/state/default/pr_selection/state_dialog_with_selections.snap
---
source: src/ui/state/default/pr_selection.rs
expression: harness.backend()
---
"                                                                                "
" ┌Pull Requests───────────────────────────────────────────────────────────────┐ "
" │      PR #     Date         Title        Author      Deps  Work Items       ↑ "
" │→     100      2024-01-10   Fix login bu Alice Johns 0/0   #1001 (Closed)   █ "
" │      101      2024-01-12   Update user  Bob Wilson  0/0   #1002 (Active)   █ "
" │      102      2024-01-14   Add analytic Carol Marti 0/0   #1003 (Resolved),█ "
" │                                                                            █ "
" │                  ┌──────────────────────────────────────┐                  █ "
" │                  │ Select Work Item States (2 selected) │                  █ "
" │                  └──────────────────────────────────────┘                  █ "
" │                  ┌States────────────────────────────────┐                  █ "
" │                  │☐ Active                              │                  █ "
" │                  │✓ Resolved                            │                  ║ "
" │                  │✓ Closed                              │                  ↓ "
" └──────────────────│☐ New                                 │──────────────────┘ "
" ┌Work Item (1/1)───│☐ Removed                             │──────────────────┐ "
" │Bug         #1001 │                                      │                  │ "
" │● Closed          │                                      │: Alice Johnson   │ "
" └──────────────────└──────────────────────────────────────┘──────────────────┘ "
" ┌History───────────┌Help──────────────────────────────────┐──────────────────┐ "
" │No history availab│↑/↓: Navigate | Space: Toggle state | │                  │ "
" └──────────────────│c: Clear & apply | a: Select all state│──────────────────┘ "
" ┌Reproduction Steps└──────────────────────────────────────┘──────────────────┐ "
" │1. Navigate to login page                                                   │ "
" │2. Click login button                                                       │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌Help────────────────────────────────────────────────────────────────────────┐ "
" │↑/↓: Navigate PRs | ←/→: Navigate Work Items | /: Search | Space: Toggle |  │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                "
