src/ui/snapshots/state/default/pr_selection/work_item_highlighting_with_highlighted.snap
---
source: src/ui/state/default/pr_selection.rs
expression: harness.backend()
---
"                                                                                                                        "
" ┌Pull Requests───────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │      PR #     Date         Title                         Author            Work Items             PR Dependenc     ↑ "
" │→     100      2024-01-10   Backend fix for login         Alice             #1001 (Active)                          █ "
" │      101      2024-01-11   Frontend fix for login        Bob               #1001 (Active), #1002                   █ "
" │      102      2024-01-12   Auth module refactor          Charlie           #1002 (Active)                          █ "
" │      103      2024-01-13   Independent feature           Diana             #1003 (Active)                          █ "
" │                                                                                                                    █ "
" │                                                                                                                    █ "
" │                                                                                                                    █ "
" │                                                                                                                    █ "
" │                                                                                                                    █ "
" │                                                                                                                    █ "
" │                                                                                                                    █ "
" │                                                                                                                    █ "
" │                                                                                                                    █ "
" │                                                                                                                    █ "
" │                                                                                                                    █ "
" │                                                                                                                    █ "
" │                                                                                                                    █ "
" │                                                                                                                    █ "
" │                                                                                                                    ║ "
" │                                                                                                                    ║ "
" │                                                                                                                    ↓ "
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ┌Work Item (1/1)─────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │Bug         #1001   Fix login button                                                                                │ "
" │● Active          | Iteration: Unknown | Assigned: Unassigned                                                       │ "
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ┌History─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │No history available                                                                                                │ "
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ┌Reproduction Steps (use ←/→ to navigate work items)─────────────────────────────────────────────────────────────────┐ "
" │No reproduction steps available.                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ┌Help────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │↑/↓: Navigate | Space: Toggle | i: Select+Related | I: All Related | /: Search | g: Graph | s: Multi-select | Enter:│ "
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                                                        "
